# sshtron

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build_linux.sh  build_windows.ps1  main.c  sshtron.pkg
.github/: FUNDING.yml
SSHtron/: main.cpp
SSHtron.xcodeproj/: project.pbxproj
SSHtron.xcodeproj/project.xcworkspace/xcuserdata/grig.xcuserdatad/: UserInterfaceState.xcuserstate
SSHtron.xcodeproj/xcuserdata/grig.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: cli.c  cli.h  compat.h  connection.c  connection.h
